--- a/login.css
+++ b/login.css
@@ -1,44 +1,60 @@
-body{
-    margin: 0;
-    padding: 0;
-    background: aliceblue;
-    font-family: sans-serif;
-}
-
 h5{
     font-family: sans-serif;
-    color: white ;
+    font-size: 10pt;
+    font-weight: lighter;
+    color: rgb(222, 242, 248) ;
     background: darkcyan ;
-    padding: 8pt;
+    padding: 20px;
     width: 12%;
-    /*padding*/
+    margin: 0;
+
 }
 
 .loginbox{
     width: 420px;
     height: 200px;
     top: 50%;
-    bottom: 50%;
-    background: white;
-    color: #fff; 
+    left: 50%;
+    background:white); 
     position: absolute;
     transform: translate(-50%, -50%);
     box-sizing: border-box;
+    border: solid darkcyan;
+    border-radius: 5px;
+    border-width: 1px;
 }
 
 .loginbox p{
-    margin: 0;
-    padding: 0;
+    margin: 20px center 20px center;
+    padding: auto;
+    font-family: sans-serif;
     font-weight: lighter;
+    color: lightgray;
+
+}
+
+.loginbox input{
+    width: 70%;
+    padding: auto;
+    margin-bottom: 20px;
+    border: solid darkcyan;
+    border-width: 1px;
+    outline:1px;
+    height: 20px;
+    border-radius: 5px;
 }
 
 .loginbox input[type="submit"]{
-    width: 12%;
-    margin-bottom: 20px;
     border: none;
-    border-bottom: 1px solid white;
-    outline:none;
-    height: 40px;
+    height: 25px;
+    background: darkcyan;
+    font-family: sans-serif;
+    font-size: 10pt;
+    color: white;
+    border-radius: 5px;
+    width: 12%;
+    align-content: left;
+
 }
 
 
